<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:padding="10dp">

        <ImageView
            android:id="@+id/row_btnDown"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/contentdescription"
            android:src="@mipmap/down_image" />

        <TextView
            android:id="@+id/row_txtNumber"
            android:layout_width="26dp"
            android:layout_height="32dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/row_btnDown"
            android:gravity="center"
            android:text="@string/_00"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/row_btnUp"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="6dp"
            android:layout_toStartOf="@id/row_txtNumber"
            android:contentDescription="@string/contentdescription"
            android:src="@mipmap/up_image" />

        <TextView
            android:id="@+id/row_txtName"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/row_btnUp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.v7.widget.CardView>